<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">uSynergy</string>
	<string name="about">about</string>
	<string name="aboutmsg">\n\nAny suggestion please contact to us:onlyxool@gmail.com and coolmite@gmail.com.\n\nMore detail:https://github.com/onlyxool/usynergy\n\n</string>
	<string name="startusynergy">Start uSynergy</string>
	<string name="start">start</string>
	<string name="stop">stop</string>
	<string name="serverlist">server list</string>
	<string name="addconfig">add new config</string>
	<string name="screenname">Screen Name</string>
	<string name="editscreenname">edit screen name</string>
	<string name="ip">ip</string>
	<string name="hello_world">Hello world!</string>
	<string name="addipstrhint">Input server ip address</string>
	<string name="addporthint">Input server port</string>
	<string name="addnewserverconfig">Add new server config</string>
	<string name="editserverconfig">Edit server config</string>
	<string name="noserverconfig">you don\'t chooice any server config!!</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="edit">edit</string>
	<string name="del">del</string>
	<string name="defualtport">24800</string>
	<string name="usynergyisrun">usynergy is running, have fun!</string>
	<string name="usynergyisshutdown">usynergy is shutdown</string>
</resources>
